[package]
name = "custom_k8s_scheduler"
version = "0.1.0"
authors = ["Jiri Kremser <jiri.kremser@gmail.com>"]
edition = "2018"
default-run = "scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "scheduler"
path = "src/main.rs"

[dependencies]
actix-rt = "2.0.0-beta.2"
actix-web = "4.0.0-beta.1"
prometheus = "0.11.0"
kube = "0.52.0"
kube-runtime = "0.52.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.1.0", features = ["macros"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
